@@ -1,3 +1,7 @@
+2004-07-18  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/sp-path.cpp (sp_path_write): Handle shape->curve==NULL.
+
 2004-07-18  MenTaLguY  <mental@rydia.net>
 
 	* Makefile.am, configure.in, m4/Makefile.am, m4/codeset.m4, m4/gettext.m4,
